--- a/app/src/main/res/layout/bridge_recycler_acitivity.xml
+++ b/app/src/main/res/layout/bridge_recycler_acitivity.xml
@@ -15,6 +15,6 @@
             android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
     <!--自定义view 包含了Loading以及空白页-->
-    <!--<include layout="@layout/layout_common_empty" />-->
+    <include layout="@layout/layout_common_empty" />
 
 </FrameLayout>
