--- a/app/src/main/res/layout/cases_list_item.xml
+++ b/app/src/main/res/layout/cases_list_item.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/name"
-                android:layout_marginTop="43px"
+                android:layout_marginTop="15px"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="金门海峡大桥金门海峡大桥金门fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff海峡大桥金门海峡大桥金门海峡大桥金门海峡大桥金门海峡大桥金门海峡大桥金门海峡大桥金门海峡大桥金门海峡大桥"
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/product"
-                android:layout_marginTop="43px"
+                android:layout_marginTop="15px"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="5天"
@@ -70,13 +70,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/predict"
-                android:layout_marginTop="43px"
+                android:layout_marginTop="15px"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="10m2"
                 android:textColor="#556fb5"
                 android:textSize="24px" />
-
+            <TextView
+                android:id="@+id/state"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/area"
+                android:layout_marginTop="15px"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="进行中"
+                android:textColor="#556fb5"
+                android:textSize="24px" />
         </com.zhy.autolayout.AutoRelativeLayout>
     </com.zhy.autolayout.AutoLinearLayout>
 </android.support.v7.widget.CardView>
