--- a/app/src/main/res/layout/worker_process_layout.xml
+++ b/app/src/main/res/layout/worker_process_layout.xml
@@ -193,12 +193,38 @@
                         android:text="选择项目" />
 
                 </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/area_ll"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/service_ll"
+                    android:layout_marginTop="25dp"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/area_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="面积"
+                        android:textColor="#333333"
+                        android:textSize="19sp" />
+
+                    <EditText
+                        android:id="@+id/area_ed"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:hint="面积" />
+
+
+
+                </LinearLayout>
                 <LinearLayout
                     android:id="@+id/predict_ll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/service_ll"
+                    android:layout_below="@+id/area_ll"
                     android:layout_marginTop="25dp"
                     android:orientation="horizontal">
 
